--- a/static/chat/css/main.css
+++ b/static/chat/css/main.css
@@ -36,8 +36,19 @@ body {
     left: 0;
     z-index: 1030;
     background-color: #4cd137;
+}
+
+.navbar-main ul {
+    overflow-x: scroll;
     white-space: nowrap;
-    overflow-x: auto;
+}
+
+.nav-item {
+    margin-right: 25px
+}
+
+#mainDropdown {
+    overflow-x: visible !important;
 }
 
 .scrolled-down {
