Changed how users gives feedback

--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -96,7 +96,7 @@
                     </div>
                     <!-- AddToAny END -->
                     <a class="dropdown-item" href="#UNDER_DEVELOPMENT">About</a>
-                    <a class="dropdown-item" href="#">Feedback</a>
+                    <a class="dropdown-item" href="https://www.surveymonkey.com/r/5WMYSSX" target="_blank">Feedback</a>
                     <a class="dropdown-item" href="#"
                         onclick="return alert('officialorgachat@gmail.com   Youtube channels: search for Orgachat')">FAQ
                         and Contact</a>
