--- a/chat/templates/chat/home.html
+++ b/chat/templates/chat/home.html
@@ -60,15 +60,14 @@
     </div>
 </div>
 <script>
-    // ==========Survey Monkey=======
     (function (t, e, s, o) {
-        var n, c, l;
-        t.SMCX = t.SMCX || [], e.getElementById(o) || (n = e.getElementsByTagName(s), c = n[n.length - 1], l = e
-            .createElement(s), l.type = "text/javascript", l.async = !0, l.id = o, l.src =
-            "https://widget.surveymonkey.com/collect/website/js/tRaiETqnLgj758hTBazgd86QI2P093kSXZ_2Bob1kVnKEoJReaEZg_2FFTM1ZslL2XaC.js",
-            c.parentNode.insertBefore(l, c))
+        var n, a, c;
+        t.SMCX = t.SMCX || [], e.getElementById(o) || (n = e.getElementsByTagName(s), a = n[n.length - 1], c = e
+            .createElement(s), c.type = "text/javascript", c.async = !0, c.id = o, c.src =
+            "https://widget.surveymonkey.com/collect/website/js/tRaiETqnLgj758hTBazgd9myoxaykD4Nric6MRtsFnhNEIw3RqTvkJMVb_2F_2FVf_2FWO.js",
+            a.parentNode.insertBefore(c, a))
     })(window, document, "script", "smcx-sdk");
-    // ==========Survey Monkey=======
+
     let deferredPrompt;
     const addBtn = document.querySelector('#addToHomescreen');
     addBtn.style.display = 'none';
