--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -100,6 +100,11 @@
                     <a class="dropdown-item" href="#"
                         onclick="return alert('officialorgachat@gmail.com   Youtube channels: search for Orgachat')">FAQ
                         and Contact</a>
+                    <hr>
+                    <form action="{% url 'logoutuser' %}" method="post">
+                        {% csrf_token %}
+                        <button type="submit" class="dropdown-item" onclick="return confirm('You are about to logout')">Logout</button>
+                    </form>
                 </div>
             </div>
         </nav>
