--- a/users/templates/users/signupuser.html
+++ b/users/templates/users/signupuser.html
@@ -9,12 +9,16 @@ organizing your chat{% endblock description %}
 {% block content %}
 <script src="{% static 'users/js/signupuser.js' %}"></script>
 <link rel="stylesheet" href="{% static 'users/css/signupuser.css' %}">
-
-<div class="video-container" style="text-align: center;">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/xAJIVX5tXeg" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+<br><br>
+<div style="margin-left: auto; margin-right: auto; text-align: center;">
+    <h1 style="color: #EBC12C">Start chatting in Orgachat</h1>
+    <h2>People in orgachat are much safer</h2>
+    <p>Protect yourself</p>
+    <p>your data</p>
+    <p>People you care about</p>
+    <p>The only thing others can access is your username</p>
 </div>
+
 <div class="form-wrap">
     <div class="tabs">
         <h3 class="signup-tab"><a href="#" class="active" style="text-decoration: none;">Sign Up</a></h3>
